style.css
body {
  font-family: Arial;
  padding: 20px;
  background: lightblue;
  background-image: radial-gradient(#ddd 1px, transparent 1px);
  background-size: 20px 20px;
}

.shop-links{
  text-decoration: none;
  size: 5px;
}

h2 {
  display: inline-block;
  margin-top: 50px;
  font-size: 24px;
  font-weight: bold;
  font-family: cursive;
  background: azure;
  padding: 10px 20px;
  size: 75px;
  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
}

h2 {
  display: block;
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
}

.shop-info {
  text-align: center;
  margin-top: 40px;
  margin-bottom: 20px;
}

.shop-info p {
  color: #666;
}


.products {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
  justify-content: center;
  margin-top: 20px;
}

.cart {
  background: white;
  border-radius: 25px;
  padding: 15px;
  margin: 60px auto;
  max-width: 400px;
  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
}

.product {
  width: 180px;
  background: white;
  border-radius: 12px;
  padding: 15px;
  text-align: center;
  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
  transition: 0.2s;
}

.product:hover {
  transform: translateY(-5px);
}

button {
   margin-top: 5px;
  padding: 6px 10px;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

button:hover {
  opacity: 0.85;
}

button {
  background: #4CAF50;
  color: white;
}

button[disabled] {
  background: gray;
  cursor: not-allowed;
}

footer {
  text-align: center;
  margin-top: 50px;
  color: #777;
  font-size: 14px;
}

